--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ __pycache__/
 *.egg-info/
 dist/
 build/
+.venv/
+venv/
 
 # IDE
 .vscode/
@@ -22,6 +24,7 @@ Thumbs.db
 # Testing
 .pytest_cache/
 .coverage
+htmlcov/
 
 # Logs
 *.log
